# orion5_humble_description

./: CMakeLists.txt  README.md  package.xml
launch/: view_orion5.launch.py
meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
meshes/stl/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
urdf/: orion5.urdf
